sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:22: error: reassignment to val
    k = k + 1
      ^